# TGBot-Oguzok

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
src/: __init__.py  main.py
src/handlers/: delayed_message.py  reminder.py  start.py
src/services/: messages.py  reminder.py  time.py
src/utils/: config.py  filtres.py  schedule.py  time.py
